Fixed smtp server

--- a/.github/workflows/postman-run.yml
+++ b/.github/workflows/postman-run.yml
@@ -27,7 +27,7 @@ jobs:
         uses: hilarion5/send-mail@v1
         if: always()
         with:
-          smtp-server: smtp.example.com
+          smtp-server: smtp.gmail.com
           smtp-port: 465
           smtp-secure: true
           from-email: sender@example.com
