Fixed email and message of mail

--- a/.github/workflows/postman-run.yml
+++ b/.github/workflows/postman-run.yml
@@ -31,9 +31,9 @@ jobs:
           smtp-port: 465
           smtp-secure: true
           from-email: ${{ secrets.EMAIL_USERNAME }}
-          to-email: oluwaseyinexus137@gmail.com,af.afoarinadekunle@gmail.com
+          to-email: oluwaseyinexus137@gmail.com,af.afolarinadekunle@gmail.com
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "Automated API Tests Failed in ${{ github.workflow }} on ${{ github.sha }}"
-          body: This is a test email sent from GitHub Actions.
+          subject: "Automated API Tests Failed in ${{ github.repository }}"
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}. To investigate check at {{ github.action_url }}.
           
