--- a/.github/workflows/postman-run.yml
+++ b/.github/workflows/postman-run.yml
@@ -23,6 +23,14 @@ jobs:
         run: |
           postman collection run "25376308-0e2d67f1-e1c0-4c0e-8243-d038954ae9df"
 
+      - name: Install dependencies
+        run: |
+          python -m pip install selenium webdriver_manager
+
+      - name: Run Selenium tests (Headless Chrome)
+        run: |
+          python $GITHUB_WORKSPACE/login_test_ci.py  # Replace with your test directory
+
       - name: Send Email
         uses: hilarion5/send-mail@v1
         if: always()
