--- a/.github/workflows/postman-run.yml
+++ b/.github/workflows/postman-run.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           postman collection run "25376308-0e2d67f1-e1c0-4c0e-8243-d038954ae9df"
 
-      - name: Install dependencies
+      - name: Install dependencies start
         uses: actions/checkout@v3
         run: |
           python -m pip install selenium webdriver_manager
