--- a/.github/workflows/postman-run.yml
+++ b/.github/workflows/postman-run.yml
@@ -15,21 +15,17 @@ jobs:
       - name: Run API tests
         run: |
           postman collection run "25376308-0e2d67f1-e1c0-4c0e-8243-d038954ae9df"
-      - name: Run API tests
-        run: |
-          postman collection run "25376308-0e2d67f1-e1c0-4c0e-8243-d038954ae9df"
 
-      - name: Run API tests
-        run: |
-          postman collection run "25376308-0e2d67f1-e1c0-4c0e-8243-d038954ae9df"
+  selenium-job:
+    runs-on: ubuntu-latest
+    steps:
+      -uses: actions/checkout@v3
 
       - name: Install dependencies start
-        uses: actions/checkout@v3
         run: |
           python -m pip install selenium webdriver_manager
-
+          
       - name: Run Selenium tests (Headless Chrome)
-        uses: actions/checkout@v3
         run: |
           python $GITHUB_WORKSPACE/tests/login_test_ci.py  # Replace with your test directory
 
